--- a/单元测试_测试驱动开发（Money类）_演示/单元测试_测试驱动开发（Money类）_演示.csproj
+++ b/单元测试_测试驱动开发（Money类）_演示/单元测试_测试驱动开发（Money类）_演示.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.6.3.13283, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
+    <Reference Include="nunit.framework, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,8 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bank.cs" />
+    <Compile Include="BankTest.cs" />
     <Compile Include="Dollar.cs" />
     <Compile Include="DollarTest.cs" />
+    <Compile Include="Franc.cs" />
+    <Compile Include="Money.cs" />
+    <Compile Include="FrancTest.cs" />
+    <Compile Include="MoneyTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
